--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ altair==4.1.0
 astroid==2.4.2
 async-generator==1.10
 attrs==20.3.0
+autopep8==1.5.5
 bleach==3.3.0
 bokeh==2.0.0
 boltons==20.2.1
 branca==0.4.2
+Brotli==1.0.9
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
@@ -14,20 +16,29 @@ colorama==0.4.4
 colorlog==4.7.2
 cycler==0.10.0
 dacite==1.6.0
+dash==1.19.0
+dash-core-components==1.15.0
+dash-html-components==1.1.2
+dash-renderer==1.9.0
+dash-table==4.11.2
 datapane==0.9.2
 decorator==4.4.2
 defusedxml==0.6.0
 dominate==2.6.0
 entrypoints==0.3
 face==20.1.1
+Flask==1.1.2
+Flask-Compress==1.8.0
 flit-core==3.0.0
 folium==0.11.0
 furl==2.1.0
+future==0.18.2
 glom==20.11.0
 idna==2.10
 importlib-resources==3.3.1
 ipython-genutils==0.2.0
 isort==5.7.0
+itsdangerous==1.1.0
 Jinja2==2.11.3
 jsonschema==3.2.0
 jupyter-client==6.1.11
@@ -55,6 +66,7 @@ pandocfilters==1.4.3
 Pillow==8.1.0
 plotly==4.14.3
 pyarrow==2.0.0
+pycodestyle==2.6.0
 Pygments==2.7.4
 pylint==2.6.0
 pyparsing==2.4.7
@@ -70,6 +82,7 @@ retrying==1.3.3
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
 six==1.15.0
+Stock-Visuals==1.0.0
 stringcase==1.2.0
 tabulate==0.8.7
 testpath==0.4.4
@@ -81,4 +94,5 @@ typing-extensions==3.7.4.3
 urllib3==1.26.3
 validators==0.18.2
 webencodings==0.5.1
+Werkzeug==1.0.1
 wrapt==1.12.1
